--- a/style.css
+++ b/style.css
@@ -771,6 +771,10 @@ section {
         left: 7px;
 
     }
+    
+    .timeline-item:nth-child(odd) {
+        text-align: left;
+    }
 
     .timeline-item:nth-child(odd) {
         padding-right: 0;
@@ -783,7 +787,7 @@ section {
     }
 
     .timeline-dot {
-        left: 0;
+        left: -1.5px;
 
     }
 
