--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@
     --text-color: rgb(0, 0, 0);
     --main-color: #ea0c0c;
     --second-text-color: rgb(255, 25, 0);
+    .navbar.active {
+        display: block;
+        background-color:rgba(255, 255, 255, 0.763);
+        
+    }
 }
 
 #icon {
@@ -72,6 +77,7 @@ body {
 #menu-icon {
     display: none;
     font-size: 3.5rem;
+   
     color: var(--main-color);
 }
 
@@ -722,6 +728,7 @@ section {
     .navbar.active {
         display: block;
 
+       
     }
 
 
@@ -750,6 +757,10 @@ section {
         flex-direction: column-reverse;
         margin: 2rem 0;
     }
+    
+    .about-content {
+        text-align: center;
+    }
 
     .about h2 {
         text-align: center;
@@ -764,7 +775,7 @@ section {
         flex-direction: column;
     }
 
-
+     
 
 
     .timeline-item::before {
