--- a/style.css
+++ b/style.css
@@ -680,7 +680,7 @@ section {
 }
 
 .footer ul li a {
-    color: white;
+     color: var(--text-color);
     border-bottom: 3px solid transparent;
     transition: .3s ease-in-out;
 
